mod：タイトル改行位置修正、コメント修正

--- a/index.html
+++ b/index.html
@@ -490,12 +490,12 @@
         <div class="container">
             <div class="hero-content">
                 <span class="brand-subtitle">OFFICIAL SITE</span>
-                <h1 class="brand-title">Hachico's Udemy<br>Courses & Books</h1>
+                <h1 class="brand-title">Hachico's <br>Udemy Courses<br>& Books</h1>
 
                 <div class="welcome-text">
                     <p>
-                        ハチコのUdemyコースを<strong>特別価格</strong>で受講できます。<br>
-                        開発スキルから業務効率化まで、あなたの学習をサポートします。
+                        ハチコのUdemyコースを<strong>特別価格</strong>で受講できます！<br>
+                        是非ご活用ください♪
                     </p>
                 </div>
 
@@ -701,7 +701,7 @@
                 price: "0円",
                 originalPrice: "499円",
                 link: "https://amzn.to/4oxSPgK"
-            },ｓ
+            },
             {
                 id: 1,
                 title: "遊びのネタ切れ撃退！ChatGPTで乗り切る夏休み攻略本",
