--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             letter-spacing: 0.2em;
             text-transform: uppercase;
             margin-bottom: 1rem;
+            background: linear-gradient(to left, #00f2ff 0%, #ffffff 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
             display: block;
             font-weight: 700;
             text-shadow: 0 0 10px var(--accent-glow);
@@ -110,7 +113,7 @@
             font-weight: 900;
             line-height: 1.3;
             margin-bottom: 2rem;
-            background: linear-gradient(to bottom, #00f2ff 0%, #ffffff 100%);
+            background: linear-gradient(to left, #00f2ff 0%, #ffffff 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             color: transparent;
