--- a/coupon.html
+++ b/coupon.html
@@ -451,19 +451,21 @@
 
         .copy-feedback {
             position: absolute;
-            top: -40px;
+            top: -50px;
             left: 50%;
             transform: translateX(-50%) translateY(10px);
             background: var(--accent-cyan);
             color: #000;
-            padding: 6px 16px;
+            padding: 8px 20px;
             border-radius: 30px;
-            font-size: 0.8rem;
+            font-size: 0.85rem;
             font-weight: 700;
             opacity: 0;
             transition: all 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
             pointer-events: none;
-            box-shadow: 0 0 15px var(--accent-glow);
+            box-shadow: 0 0 20px var(--accent-glow), 0 4px 12px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
+            white-space: nowrap;
         }
 
         .copy-feedback.show {
