--- a/coupon.html
+++ b/coupon.html
@@ -447,30 +447,30 @@
             color: #fff;
             font-weight: 700;
             letter-spacing: 0.05em;
+            position: relative;
         }
 
         .copy-feedback {
             position: absolute;
-            top: -50px;
+            top: 50%;
             left: 50%;
-            transform: translateX(-50%) translateY(10px);
+            transform: translate(-50%, -50%);
             background: var(--accent-cyan);
             color: #000;
-            padding: 8px 20px;
+            padding: 8px 24px;
             border-radius: 30px;
-            font-size: 0.85rem;
+            font-size: 0.9rem;
             font-weight: 700;
             opacity: 0;
             transition: all 0.3s cubic-bezier(0.2, 0.8, 0.2, 1);
             pointer-events: none;
             box-shadow: 0 0 20px var(--accent-glow), 0 4px 12px rgba(0, 0, 0, 0.3);
-            z-index: 1000;
+            z-index: 10;
             white-space: nowrap;
         }
 
         .copy-feedback.show {
             opacity: 1;
-            transform: translateX(-50%) translateY(0);
         }
 
         /* Button */
