mod: クーポン更新。20251212−1216 12:00まで

--- a/coupon.html
+++ b/coupon.html
@@ -724,31 +724,31 @@
                 id: 6,
                 title: "ClaspとCodex CLIで始めるGASプログラミング入門｜ローカル環境で快適に開発しよう【初心者歓迎】",
                 image: "https://img-c.udemycdn.com/course/480x270/6909291_b3a3_3.jpg",
-                price: "1,500円",
+                price: "1,300円",
                 originalPrice: "9,800円",
-                code: "M202512",
+                code: "251212",
                 link: "https://www.udemy.com/course/clasp-gas/"
             },
             {
-                id: 5,
+                id: 2,
                 title: "【ClaudeでGASプログラミング】Google Apps Scriptで明日の予定をLINEに通知しよう",
                 image: "https://img-c.udemycdn.com/course/480x270/6505779_30af_2.jpg",
-                price: "1,800円",
+                price: "1,300円",
                 originalPrice: "19,800円",
-                code: "M202512",
+                code: "251212",
                 link: "https://www.udemy.com/course/claude-gas-line/"
             },
             {
                 id: 3,
                 title: "会社員のためのAI活用術！ChatGPT活用・基本の仕事術【タスク管理・情報整理・アイデア発想・文章作成を効率化】",
                 image: "https://img-c.udemycdn.com/course/480x270/6568957_cc57_2.jpg",
-                price: "1,500円",
+                price: "0円",
                 originalPrice: "19,800円",
-                code: "M202512",
+                code: "251212",
                 link: "https://www.udemy.com/course/ai_smart_biz/"
             },
             {
-                id: 1,
+                id: 5,
                 title: "初心者向けCodex CLI バイブコーディング 基礎マスターコース",
                 image: "https://img-c.udemycdn.com/course/480x270/6764989_c93f_2.jpg",
                 price: "1,500円",
@@ -757,21 +757,21 @@
                 link: "https://www.udemy.com/course/codex-cli/"
             },
             {
-                id: 2,
+                id: 4,
                 title: "Claude Codeで始める VibeCodingスタートガイド｜インストールからWebページ作成・アプリ開発体験まで",
                 image: "https://img-c.udemycdn.com/course/480x270/6722887_113e_3.jpg",
-                price: "1,500円",
+                price: "1,300円",
                 originalPrice: "9,800円",
-                code: "M202512",
+                code: "251212",
                 link: "https://www.udemy.com/course/claude-code-for-beginners/"
             },
             {
-                id: 4,
+                id: 1,
                 title: "【はじめてのDify】AIチャットボット開発へのファーストステップ",
                 image: "https://img-c.udemycdn.com/course/480x270/6424193_0c5a_4.jpg",
-                price: "1,500円",
+                price: "0円",
                 originalPrice: "12,800円",
-                code: "M202512",
+                code: "251212",
                 link: "https://www.udemy.com/course/dify-ai-chatbot/"
             }
         ];
