mod: Kindleセクションにidを追加。別ページからKindleリストへ直行できるように

--- a/coupon.html
+++ b/coupon.html
@@ -604,7 +604,7 @@
             </div>
 
             <!-- Kindle Books Section -->
-            <div class="section-header">
+            <div id="kindle" class="section-header">
                 <h2>Books <small>- Kindle Unlimitedなら0円</small></h2>
             </div>
             <div id="books-container" class="coupon-grid">
@@ -742,7 +742,7 @@
                 id: 3,
                 title: "会社員のためのAI活用術！ChatGPT活用・基本の仕事術【タスク管理・情報整理・アイデア発想・文章作成を効率化】",
                 image: "https://img-c.udemycdn.com/course/480x270/6568957_cc57_2.jpg",
-                price: "1,500円",
+                price: "0円",
                 originalPrice: "19,800円",
                 code: "M202601",
                 link: "https://www.udemy.com/course/ai_smart_biz/"
@@ -769,7 +769,7 @@
                 id: 4,
                 title: "【はじめてのDify】AIチャットボット開発へのファーストステップ",
                 image: "https://img-c.udemycdn.com/course/480x270/6424193_0c5a_4.jpg",
-                price: "1,500円",
+                price: "0円",
                 originalPrice: "12,800円",
                 code: "M202601",
                 link: "https://www.udemy.com/course/dify-ai-chatbot/"
