feat: coupon.htmlに新しいUdemyクーポンを2つ追加

--- a/coupon.html
+++ b/coupon.html
@@ -721,6 +721,24 @@
         // ==========================================
         const coupons = [
             {
+                id: 8,
+                title: "Google Opal初心者向け基礎講座：Gemini、NanoBananaを活用したAIアプリを制作しよう",
+                image: "https://img-c.udemycdn.com/course/480x270/6986643_301d.jpg",
+                price: "0円",
+                originalPrice: "14,800円",
+                code: "202601B",
+                link: "https://www.udemy.com/course/google-opal-basics/"
+            },
+            {
+                id: 7,
+                title: "【Obsidian】PCとスマートフォンを無料で同期！いつでもどこでも「第二の脳」にアクセスしよう",
+                image: "https://img-c.udemycdn.com/course/480x270/7024025_ea66_2.jpg",
+                price: "0円",
+                originalPrice: "9,800円",
+                code: "202601B",
+                link: "https://www.udemy.com/course/obsidian-mobile/"
+            },
+            {
                 id: 6,
                 title: "ClaspとCodex CLIで始めるGASプログラミング入門｜ローカル環境で快適に開発しよう【初心者歓迎】",
                 image: "https://img-c.udemycdn.com/course/480x270/6909291_b3a3_3.jpg",
